# just-agents

./: pyproject.toml
incontext/: __init__.py  agents.py  schema.sql
incontext/static/: styles.css
incontext/templates/: base.html
incontext/templates/agents/: create.html  index.html  update.html
tests/: data.sql  test_db.py  test_home.py
