[project]
name = "incontext"
version = "0.0.2"
description = "incontext but it's just agents."
dependencies = [
	"flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["incontext"]
